--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Font Awesome icons (free version)-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="styles.css" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
         <!-- Fonts CSS-->
         <link rel="stylesheet" href="heading.css">
         <link rel="stylesheet" href="body.css">
