--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/L3L5NSRIE5G5PKGPBQ5HCWIZLU.jpg" alt="Lebron James"/>
+                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio//L3L5NSRIE5G5PKGPBQ5HCWIZLU.jpg" alt="Lebron James"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Lebron came into the NBA as the first pick of the 2003 NBA draft</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
@@ -176,9 +176,9 @@
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/cd0ymzcznguwzdbhnduynddiytjhm2yyzthlmtjjotqwyyznpte5zjm3zjg4mzewmja0otvkmtjkmwnlyje1mwqyody4.webp" alt="Lebron James"/>
+                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/cd0ymzcznguwzdbhnduynddiytjhm2yyzthlmtjjotqwyyznpte5zjm3zjg4mzewmja0otvkmtjkmwnlyje1mwqyody4.jpeg" alt="Lebron James"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Thisis Lebron before he left to miami</p>
+                                    <p class="mb-5">This Lebron before he left to miami</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
@@ -230,7 +230,7 @@
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/download.jpeg" alt="Lebron James"/>
+                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/688480574-850x560.jpeg" alt="Lebron James"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Lebron chose to go back to cleveland and win a ring and he did it</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
@@ -257,7 +257,7 @@
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/10lebron-voters-mediumSquareAt3X.jpg" alt="Lebron James"/>
+                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/65a039c0-aed1-11ec-b938-22ede50428cd.jpeg" alt="Lebron James"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Lebron james on his current team the lakers</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
